# VLMProject

./: .gitignore  README.md  pyproject.toml
adapters/: __init__.py  dummy.py  paligemma2.py  paligemma2_attention.py  paligemma2_blank_image_eval.py  paligemma2_eval.py  paligemma2_two_pass_unified.py  qwen25_vl.py  qwen25_vl_attention.py  qwen25_vl_eval.py  qwen25_vl_no_image_eval.py  qwen25_vl_no_image_temp07_eval.py  qwen25_vl_no_image_temp10_eval.py  qwen25_vl_temp07_eval.py  qwen25_vl_temp10_eval.py  qwen25_vl_two_pass.py  qwen25_vl_two_pass_attention.py  qwen25_vl_two_pass_unified.py  qwen25_vl_two_pass_variants.py
examples/: tiny_vlmbias.jsonl
reports/: README.md  manifest.tsv  paligemma2_vs_qwen_notes.md  summary.tsv
scripts/: compare_vlmbias_runs.py  make_completed_experiment_charts.py  make_naturalbench_slice.py  make_paligemma2_report_charts.py  make_vlmbias_prompt_variant_comparison.py  make_vlmbias_slice.py  run_attention_alpha_sweep.py  run_paligemma2_attention_alpha_sweep.py  run_paligemma2_smoke.py  run_paligemma2_two_pass_unified.py  run_paligemma2_vlmbias_baseline.py  run_vlmbias_attention_ablation.py  run_vlmbias_prompt_ablation.py  run_vlmbias_resolution_ablation.py  run_vlmbias_temp07_comparison.py  run_vlmbias_temp10_comparison.py  run_vlmbias_two_pass_ablation.py  run_vlmbias_two_pass_prompt_attention.py  run_vlmbias_two_pass_prompt_variants.py  run_vlmbias_two_pass_unified.py  slurm_attention_alpha_sweep.sh  slurm_cuda_check.sh  slurm_paligemma2_attention_alpha_sweep.sh  slurm_paligemma2_two_pass_unified.sh  slurm_paligemma2_vlmbias_baseline.sh  (+3 more)
(+2573 files in other folders)
