[project]
name = "vlmproject"
version = "0.1.0"
description = "Small VLM evaluation harness for VLMBias-style benchmarks."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=2.19.0",
    "pillow>=10.0.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
qwen = [
    "accelerate>=0.30.0",
    "qwen-vl-utils>=0.0.8",
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "transformers>=4.51.0",
]
paligemma = [
    "accelerate>=0.30.0",
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "transformers>=4.51.0",
]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
vlm-eval = "vlm_eval.cli:main"
vlm-eval-naturalbench = "vlm_eval.naturalbench_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vlm_eval", "adapters"]
